...

    <!-- Settings screen -->
    <string name="settings">Settings</string>
    <string name="back">Back</string>

    <!-- Appearance -->
    <string name="appearance">Appearance</string>
    <string name="font_size">Font Size</string>
    <string name="font_family">Font Family</string>
    <string name="system_default">System Default</string>
    <string name="change">Change</string>
    <string name="select_font_family">Select Font Family</string>
    <string name="pick_font_file">Pick from file…</string>
...

    <!-- Software Theme -->
    <string name="software_theme">Software Theme</string>

    <!-- Terminal Theme -->
    <string name="theme">Terminal Theme</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="follow_system">Follow System</string>
    <string name="day_theme">Day Theme</string>
    <string name="night_theme">Night Theme</string>
    <string name="md_you">Material You</string>
    <string name="fixed">Fixed</string>
...
