...
        val CURSOR_SPEED = intPreferencesKey("cursor_speed")
    }

    companion object {
        const val DEFAULT_FONT_SIZE = 18f
        const val DEFAULT_SCROLLBACK_LINES = 50_000
        private const val DEFAULT_THEME = "Dracula Plus"
        const val DEFAULT_DAY_THEME_NAME = "Catppuccin Latte"
        const val DEFAULT_FOLLOW_SYSTEM = "follow_system"
        const val DEFAULT_THEME_MODE = "fixed"
        const val DEFAULT_TOUCH_BEHAVIOR = "right_click"
        const val DEFAULT_KEYBOARD_MODE = "raw"
        const val DEFAULT_SHELL = "/system/bin/sh"
...
