...
                label = stringResource(R.string.text_search),
                onClick = {
                    onClose()
                    onSearch()
                },
                textColor = textColor,
                testTag = "SearchButton",
            )
            DrawerActionButton(
                icon = Icons.Default.Settings,
                label = stringResource(R.string.settings_button),
                onClick = {
                    onClose()
...
